<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL_IO_P" Id="{1c7d0ca1-8d82-418f-97c6-751448e91c9c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	

	
			//wyjścia
			 b1K1 AT%Q* :BOOL	;	// chwytak 1 
			 b2K1 AT%Q* :BOOL	;	// chwytak 2
			 b3K1 AT%Q* :BOOL	;	// prawidlo gora
			 b4K1 AT%Q* :BOOL	;	// prawidlo dol
			 b5K1 AT%Q* :BOOL	;	// hamulec
			 b6K1 AT%Q* :BOOL	;	// falownik
			 b7K1 AT%Q* :BOOL	;	// rezerwa
			 b8K1 AT%Q* :BOOL	;	// rezerwa
			 
		

			
			//wejścia
			
			b1B1 AT%I* :BOOL	; //kontraktron hamulec 1
			b2B1 AT%I* :BOOL	; //kontraktron podajnik 2
			b3B1 AT%I* :BOOL	; //czujnik hamulec  ?????? sprawdzić co to jest
			b4B1 AT%I* :BOOL	; //rezerwa
			b5B1 AT%I* :BOOL	; //kontraktron hamulec 2 
			b6B1 AT%I* :BOOL	; //kontraktron podajnik 1 
			b7B1 AT%I* :BOOL	; //rezerwa 
			b8B1 AT%I* :BOOL	; //rezerwa 
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>