<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <GVL Name="GVL_Zak_IO" Id="{099fe919-f889-42df-9214-ba4d7b178eb0}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
		//wyjscia
		b_Sil_Zamkniecie AT%Q* :BOOL	;//silnik zamykakacza klapy górnej
		b_tasma AT%Q* :BOOL	;			//taśma
		bK3 AT%Q* :BOOL	;//rezerwa
		bK4 AT%Q* :BOOL	;//rezerwa
		bK5 AT%Q* :BOOL	;//rezerwa
		bK6 AT%Q* :BOOL	;//rezerwa
		bK7 AT%Q* :BOOL	;//rezerwa
		bK8 AT%Q* :BOOL	;//rezerwa
		
		
		//wejscia
		b_Czujnik_Karton	AT%I* :BOOL	;//czujnik kartonu 
		b_czujnik_OT		AT%I* :BOOL	;//czujnik obecności taśmy 
		b_kZamykacz1		AT%I* :BOOL	;//kontraktron zamykacz 1 
		b_kZamykacz2		AT%I* :BOOL	;//kontraktron zamykacz 2  
		b5B1 AT%I* :BOOL	; //rezerwa 
		b6B1 AT%I* :BOOL	; //rezerwa 
		b7B1 AT%I* :BOOL	; //rezerwa 
		b8B1 AT%I* :BOOL	; //rezerwa 
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>